...
    "open_pack": "Abrir gratis",

    "new_cards": "Cartas obtenidas",
    "return_msg": "Volver",

    "choose_pfp": "Seleccionar foto de perfil",
    "cancel": "Cancelar",
    "confirm": "Confirmar",
    "update_pfp": "Foto de perfil actualizada correctamente",
    "err_update_pfp": "Se ha producido un error al cambiar la foto de perfil",
    "friend_id": "ID Amigo",
    "friend_id_copied": "ID amigo copiado al portapapeles",
    "level": "Nvl",
...
    "loading" : "Cargando",

    "incomplete_draft" : "Plantilla incompleta",
    "no_draft_selected" : "No has seleccionado ninguna plantilla",
    "searching_match" : "Buscando partida",

    "choose_game_option": "Elegir opción de juego",
    "quick_match": "Partida rápida",
    "resume_paused": "Continuar partidas",
    "paused_games": "Partidas pausadas",
    "no_paused_games": "No hay partidas pausadas",
    "no_paused_games_message": "No tienes partidas en pausa para reanudar",
    "loading_paused_games": "Cargando partidas pausadas...",
    "failed_fetch_paused": "Error al obtener partidas pausadas",
...
    "select_ability": "Seleccionar habilidad",
    "ability_shot": "Tiro",
    "ability_control": "Control",
    "ability_defense": "Defensa",
    "request_pause": "Solicitar pausa",
    "pause_request_message": "¿Quieres solicitar una pausa?",
    "confirm_surrender": "Confirmar rendición",
    "confirm_surrender_message": "¿Estás seguro de que quieres rendirte?",
    "choose_a_card": "Elige una carta",
    "waiting_for_selection": "Esperando elección...",
    "pause": "Pausar",
    "surrender": "Rendirse",
    "card_already_used": "¡Esta carta ya fue utilizada!",
    "select_position": "Debes seleccionar un",

    "tournamentQuarterFinals": "Cuartos de final",
    "tournamentSemiFinals": "Semifinales",
    "tournamentFinal": "Final",
...
