...
      icon = const Icon(Icons.info, color: Colors.white);
      break;
  }

  late final Flushbar flush;
  flush = Flushbar(
    key: Key('snack-bar'),
    message: message,
    icon: icon,
    backgroundColor: backgroundColor,
    margin: const EdgeInsets.all(8.0),
    borderRadius: BorderRadius.circular(8.0),
    flushbarPosition: FlushbarPosition.TOP,
    duration: duration != null ? Duration(seconds: duration) : null, 
    mainButton: Row(
      mainAxisSize: MainAxisSize.min,
      children: [
        if (actionLabel != null)
          TextButton(
            key: Key('snack-bar-button'),
            onPressed: () {
              onAction?.call();
              flush.dismiss();
            },
            child: Text(
              actionLabel,
...
                color: Colors.white,
                fontWeight: FontWeight.bold,
              ),
            ),
          ),
        IconButton(
          key: Key('snack-bar-close'),
          icon: const Icon(Icons.close, color: Colors.white),
          onPressed: () => flush.dismiss(),
        ),
      ],
    ),
  );
...
