...
      context: context,
      builder: (context) => AlertDialog(
        title: Text(AppLocalizations.of(context)!.request_pause),
        content: Text(AppLocalizations.of(context)!.pause_request_message),
        actions: [
          TextButton(
            key: Key("accept_pause"),
            onPressed: () {
              Navigator.pop(context);
              Provider.of<SocketService>(context, listen: false).sendPauseRequest(widget.matchId);
            },
            child: Text(AppLocalizations.of(context)!.confirm),
          ),
...
        actions: [
          TextButton(
            onPressed: () => Navigator.pop(context),
            child: Text(AppLocalizations.of(context)!.cancel),
          ),
          TextButton(
            key: Key("accept_surrender"),
            onPressed: () {
              Navigator.pop(context);
              Provider.of<SocketService>(context, listen: false).sendSurrender(widget.matchId);
            },
            child: Text(AppLocalizations.of(context)!.accept, style: TextStyle(color: Colors.red)),
          ),
...
                padding: EdgeInsets.symmetric(horizontal: 15, vertical: 8),
                decoration: BoxDecoration(
                  color: Colors.black.withOpacity(0.5),
                  borderRadius: BorderRadius.circular(20),
                ),
                child: Text(
                  key: (_matchProvider.currentRound?.isUserTurn ?? false) ? Key('choose-card') : Key('wait-selection'),
                  (_matchProvider.currentRound?.isUserTurn ?? false) 
                  ? AppLocalizations.of(context)!.choose_a_card 
                  : AppLocalizations.of(context)!.waiting_for_selection,
                  
                  style: TextStyle(
                    color: Colors.white,
...
