...
              : (isWinner 
                  ? Colors.amber 
                  : const Color(0xFFFF6B6B)),
        ),
        SizedBox(height: screenSize.height * 0.02),
        Text(
          key: Key('resultText'),
          isDraw ? '¡${AppLocalizations.of(context)!.draw}!' : (isWinner ? '${AppLocalizations.of(context)!.win}!' : '${AppLocalizations.of(context)!.defeat}'),
          style: theme.textTheme.displayMedium?.copyWith(
            fontSize: screenSize.width * 0.08,
            fontWeight: FontWeight.w900,
            foreground: Paint()..shader = AppGradients.mainGradient.createShader(
              Rect.fromLTWH(0, 0, screenSize.width, 50),
...
            blurRadius: 10,
            offset: const Offset(0, 4),
          ),
        ],
      ),
      child: ElevatedButton(
        key: Key('home-button'),
        onPressed: onPressed,
        style: ElevatedButton.styleFrom(
          backgroundColor: Colors.transparent,
          shadowColor: Colors.transparent,
          padding: EdgeInsets.symmetric(
            vertical: screenSize.height * 0.02,
...
